--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "vercel": "^28.0.0"
   },
   "devDependencies": {
-    "@types/tailwindcss": "^3.0.11"
+    "@types/tailwindcss": "^3.0.11",
+    "typescript": "^5.7.3"
   },
   "scripts": {
     "dev": "vercel dev",
