--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "incremental": true,
+    "module": "esnext"
   },
   "include": [
     "next-env.d.ts",
