--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
     "next": "^15.1.7",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.8",
-    "vercel": "^28.0.0"
+    "vercel": "^28.0.0",
+    "@jridgewell/sourcemap-codec": "^1.4.8",
+    "@rollup/plugin-inject": "^4.0.0",
+    "rimraf": "^4.0.0",
+    "lru-cache": "^7.0.0",
+    "glob": "^9.0.0",
+    "@npmcli/fs": "^2.0.0"
   },
   "devDependencies": {
     "@types/tailwindcss": "^3.0.11",
